<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailToText"
        android:id="@+id/emailToText"
        android:textSize="17sp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/themePost"
        android:id="@+id/themePost"
        android:textSize="17sp"
        android:paddingLeft="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/post"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textPost"
        android:id="@+id/textPost"
        android:textSize="17sp"
        android:paddingLeft="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPost"
        android:lines="5"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/emailText"
        android:textAlignment="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/javaMailBtn"
        android:id="@+id/jmBtn"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clientBtn"
        android:id="@+id/button2"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        />


</LinearLayout>